ODE CHANGELOG
-------------

the rules for this file:
  * entries are sorted newest-first.
  * summarize sets of changes - dont reproduce every CVS log comment here.
  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format).

------------------------------------------------------------------------------
06/06/2017 Oleh Derevenko
        * Memory and pointer size integer type use has been changed so that 
          internal typedefs are used instead of "_t" suffixed types.

05/09/2017 Oleh Derevenko
        * Introduction of cooperative algorithms API. 
          L*D*LT cooperative factorization and linear equation system 
          cooperative solving have been implemented.
        * AtomicReadReorderBarrier, AtomicStore, AtomicStorePointer functions 
          have been added and some atomic function implementations have been 
          improved in OU.

02/20/2017 Oleh Derevenko
        * Project generation options have been changed to have built-in
          multithreaded threading implementation enabled by default.

02/19/2017 Oleh Derevenko
        * dWorldStep threaded implementation has been extended to the final 
          steps of constraint force applications and body position updates
          after the LCP solving. Note that body callbacks (if set) may be
          called from multiple threads if threaded execution is enabled.
        * OU atomicord32 type has been fixed to be unsigned on all supported
          platforms.

01/09/2017 Oleh Derevenko
        * dGeomTriMeshDataPreprocess2() public function has been added to 
          replace dGeomTriMeshDataPreprocess(). Face angles pre-computation
          for triangle meshes has been implemented.

11/13/2016 Oleh Derevenko
        * dGeomTriMeshDataGetBuff and dGeomTriMeshDataSetBuff have been marked 
          deprecated and their functionality implemented via 
          dGeomTriMeshDataGet and dGeomTriMeshDataSet. Extra function variant